About Image Fix, Positions Cleanup
Removed the image under the about section for mobile, since it was
scaling too small and was unreadable.

Removed the front-end developer and illustrator positions from the
hiring section.

--- a/css/style.css
+++ b/css/style.css
@@ -465,6 +465,8 @@ filter:alpha(opacity=5); !important;}
     #about{overflow:visible;}
 		.aboutImgWrapper {float:none; width:100%;}
 		#aboutItemWrap{padding:1em; text-align:center;}
+    #love {display: none;}
+
 
     /* Work */
     #galleryWrap .galleryItem {width: 100%;}
